--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-file-picker": "0.0.6",
     "react-google-charts": "^3.0.15",
     "react-icons": "^3.9.0",
+    "react-native": "^0.71.4",
+    "react-native-web": "^0.18.12",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-toastify": "^5.5.0"
