--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.1",
     "bootstrap": "^4.4.1",
+    "copy-to-clipboard": "^3.3.3",
     "iipzy-shared": "file:../iipzy-shared",
     "js-cookie": "^2.2.1",
     "moment": "^2.29.4",
